Bug 1718781 - Allow image preload with imagesrcset but no href r=edgar

Differential Revision: https://phabricator.services.mozilla.com/D285588