dom/html/HTMLLinkElement.cpp
@@ -446,7 +446,12 @@ void HTMLLinkElement::
     TryDNSPrefetchOrPreconnectOrPrefetchOrPreloadOrPrerender() {
   MOZ_ASSERT(IsInComposedDoc());
   if (!HasAttr(nsGkAtoms::href)) {
-    return;
+    // Per HTML spec, imagesrcset can substitute for href on image preloads.
+    nsAutoString as;
+    GetAttr(nsGkAtoms::as, as);
+    if (!as.LowerCaseEqualsASCII("image") || !HasAttr(nsGkAtoms::imagesrcset)) {
+      return;
+    }
   }
 
   nsAutoString rel;
@@ -481,45 +486,51 @@ void HTMLLinkElement::
   }
 
   if (linkTypes & ePRELOAD) {
-    if (nsCOMPtr<nsIURI> uri = GetURI()) {
-      nsContentPolicyType policyType;
+    nsCOMPtr<nsIURI> uri = GetURI();
 
-      nsAttrValue asAttr;
-      nsAutoString mimeType;
-      nsAutoString media;
-      GetContentPolicyMimeTypeMedia(asAttr, policyType, mimeType, media);
+    nsContentPolicyType policyType;
+    nsAttrValue asAttr;
+    nsAutoString mimeType;
+    nsAutoString media;
+    GetContentPolicyMimeTypeMedia(asAttr, policyType, mimeType, media);
 
-      if (policyType == nsIContentPolicy::TYPE_INVALID ||
-          !net::CheckPreloadAttrs(asAttr, mimeType, media, OwnerDoc())) {
-        // Ignore preload with a wrong or empty as attribute.
-        net::WarnIgnoredPreload(*OwnerDoc(), *uri);
-        return;
-      }
-
-      // https://html.spec.whatwg.org/#translate-a-preload-destination
-      // If destination is not "fetch", "font", "image", "script", "style", or
-      // "track", then return null.
-      int16_t asValue = asAttr.GetEnumValue();
-      if (asValue != net::DESTINATION_FETCH &&
-          asValue != net::DESTINATION_FONT &&
-          asValue != net::DESTINATION_IMAGE &&
-          asValue != net::DESTINATION_SCRIPT &&
-          asValue != net::DESTINATION_STYLE &&
-          asValue != net::DESTINATION_TRACK) {
-        // TODO: Currently the spec doesn't define an event handler to be called
-        // , but this is under discussion.
-        // See: https://github.com/whatwg/html/issues/10940
-        //
-        // Post a "load" event here to match the legacy behavior.
-        RefPtr<AsyncEventDispatcher> asyncDispatcher = new AsyncEventDispatcher(
-            this, u"load"_ns, CanBubble::eNo, ChromeOnlyDispatch::eNo);
-        asyncDispatcher->PostDOMEvent();
-        return;
-      }
-
-      StartPreload(policyType);
+    // Image preloads can derive their URI from imagesrcset without href.
+    if (!uri && (policyType != nsIContentPolicy::TYPE_IMAGE ||
+                 !HasAttr(nsGkAtoms::imagesrcset))) {
       return;
     }
+
+    if (policyType == nsIContentPolicy::TYPE_INVALID ||
+        !net::CheckPreloadAttrs(asAttr, mimeType, media, OwnerDoc())) {
+      // Ignore preload with a wrong or empty as attribute.
+      nsAutoString srcset;
+      GetAttr(nsGkAtoms::imagesrcset, srcset);
+      net::WarnIgnoredPreload(*OwnerDoc(), uri, srcset);
+      return;
+    }
+
+    // https://html.spec.whatwg.org/#translate-a-preload-destination
+    // If destination is not "fetch", "font", "image", "script", "style", or
+    // "track", then return null.
+    int16_t asValue = asAttr.GetEnumValue();
+    if (asValue != net::DESTINATION_FETCH && asValue != net::DESTINATION_FONT &&
+        asValue != net::DESTINATION_IMAGE &&
+        asValue != net::DESTINATION_SCRIPT &&
+        asValue != net::DESTINATION_STYLE &&
+        asValue != net::DESTINATION_TRACK) {
+      // TODO: Currently the spec doesn't define an event handler to be called
+      // , but this is under discussion.
+      // See: https://github.com/whatwg/html/issues/10940
+      //
+      // Post a "load" event here to match the legacy behavior.
+      RefPtr<AsyncEventDispatcher> asyncDispatcher = new AsyncEventDispatcher(
+          this, u"load"_ns, CanBubble::eNo, ChromeOnlyDispatch::eNo);
+      asyncDispatcher->PostDOMEvent();
+      return;
+    }
+
+    StartPreload(policyType);
+    return;
   }
 
   if (linkTypes & eMODULE_PRELOAD) {
@@ -606,7 +617,11 @@ void HTMLLinkElement::UpdatePreload(nsAtom* aName, const nsAttrValue* aValue,
   MOZ_ASSERT(IsInComposedDoc());
 
   if (!HasAttr(nsGkAtoms::href)) {
-    return;
+    nsAutoString as;
+    GetAttr(nsGkAtoms::as, as);
+    if (!as.LowerCaseEqualsASCII("image") || !HasAttr(nsGkAtoms::imagesrcset)) {
+      return;
+    }
   }
 
   nsAutoString rel;
@@ -625,9 +640,6 @@ void HTMLLinkElement::UpdatePreload(nsAtom* aName, const nsAttrValue* aValue,
   }
 
   nsCOMPtr<nsIURI> uri = GetURI();
-  if (!uri) {
-    return;
-  }
 
   nsAttrValue asAttr;
   nsContentPolicyType asPolicyType;
@@ -635,12 +647,19 @@ void HTMLLinkElement::UpdatePreload(nsAtom* aName, const nsAttrValue* aValue,
   nsAutoString media;
   GetContentPolicyMimeTypeMedia(asAttr, asPolicyType, mimeType, media);
 
+  if (!uri && (asPolicyType != nsIContentPolicy::TYPE_IMAGE ||
+               !HasAttr(nsGkAtoms::imagesrcset))) {
+    return;
+  }
+
   if (asPolicyType == nsIContentPolicy::TYPE_INVALID ||
       !net::CheckPreloadAttrs(asAttr, mimeType, media, OwnerDoc())) {
     // Ignore preload with a wrong or empty as attribute, but be sure to cancel
     // the old one.
     CancelPrefetchOrPreload();
-    net::WarnIgnoredPreload(*OwnerDoc(), *uri);
+    nsAutoString srcset;
+    GetAttr(nsGkAtoms::imagesrcset, srcset);
+    net::WarnIgnoredPreload(*OwnerDoc(), uri, srcset);
     return;
   }
 
